# p2c2r

./: .flake8  .gitignore  ANALYSIS_SUMMARY.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  GITHUB_INFO.md  IMPLEMENTATION_CONTRACT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STARTING_GUIDE.md  p2c2g_poc.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.sh  verify_beta.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contracts/: coordinator.py  gamer_client.py  peer_node.py  protocol.py  task_types.py
docs/: ARCHITECTURE.md  BETA_STATUS.md  CLEANUP_SUMMARY.md  COORDINATOR_FIRST_REFERENCE.md  DEVELOPMENT.md  GITHUB_SETUP.md  GIT_GUIDE.md  HYBRID_COMPUTE_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  LEGAL_COMPLIANCE.md  ML_OPTIMIZATION_AND_TASK_SPLITTING.md  PERFORMANCE_ISSUES_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  PYGAME_DEMO_IMPLEMENTATION.md  PYGAME_DEMO_VISUAL_GUIDE.md  QUICKSTART_ML.md  QUICK_ANSWER_ML_AND_SPLITTING.md  ROADMAP.md  TASK_SEPARATION_DEEP_DIVE.md  THE_VISION.md  VIBE_CODING_GUIDE.md  VISUAL_ARCHITECTURE.md  WHY_COORDINATOR_FIRST.md
docs/archive/: ARCHITECTURE_OLD.md  CONTRIBUTING.md  FUNCTIONALITY_COMPLETE.md  P2C2R_README.md  PROJECT_SUMMARY.md  START_HERE.md  TEST_FUNCTIONALITY.md
docs/guides/: QUICKSTART.md  QUICKSTART_DEMO.md
examples/: basic_usage.py
multi_device_demo/: BOINC_DEPLOYMENT.md  INTERNET_DEPLOYMENT.md  MULTI_DEVICE_DEMO_COMPLETE.md  README.md  SETUP_INSTRUCTIONS.sh  cloud_storage.py  network_config.py  p2c2r-cloud.service  p2c2r_cloud.db  run_cloud.py  run_gamer.py  run_peer.py  test_single_machine.py
network/: README.md  cloud_coordinator.py  demo_frame_network.py  frame_capturer.py  frame_distributor.py  frame_network.py  frame_upscaler.py  peer_node.py  task_executors.py  test_frame_pipeline.py  user_client.py
scripts/: run_network.sh  setup.sh  setup_demo.sh
src/p2c2g/: __main__.py  coordinator.py  peer.py
tests/: test_coordinator.py  test_models.py  test_peer.py  test_renter.py
(+29 files in other folders)
